total calories works on tab through finally

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
             </div>
 
             <div id="totalCal" class="div4">
-                
-                    <p>Total Calories:</p>
-                        <p id="output">Output needs to go here:</p>  
+                <p>Total Calories:</p>
+                    <input id="output" type="number" autofocus placeholder="Total Calories" onblur="totalCal(this)">
             </div>
 
         <h2>Add Food:</h2>
