started code for table population

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <input id="proteinSubtract" type="number" autofocus placeholder="Protein" oninput="subtractProtein(this)"><br>
             <input id="carbsSubtract" type="number" autofocus placeholder="Carbs" oninput="subtractCarbs(this)"><br>
             <input id="fatsSubtract" type="number" autofocus placeholder="Fats" oninput="subtractFats(this)"><br>
-            <input type="button" value="Add Food" onclick="addRow()" id="add"><br /><br />
+            <input id="add" type="button" value="Add Food" onclick="addFoodToTable()"><br /><br />
 
             <table id="table" class="foodTable">
                 <tr>
